More cleanup, fixed bugs regarding SWAL and comment/version deletion

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -806,10 +806,8 @@ details:open {
   display: flex;
   flex-direction: row;
   flex-flow: wrap;
-  background-color: rgba(0,180,180,.05);
-  border-bottom: 3px solid rgba(0,0,0,.4);
-  padding: .5em;
-  margin-bottom: 2em;
+  border-bottom: 1px solid rgba(0,0,0,.1);
+  margin: 1em 0;
 
   h1 {
     flex-grow: 1;
