--- a/datatags-app/app/views/backoffice/versionViewer.scala.html
+++ b/datatags-app/app/views/backoffice/versionViewer.scala.html
@@ -12,7 +12,7 @@
             JsUtils.fillAccessLinks();
           })
   </script>
-  <script src="@routes.Assets.at("js/DeleteVersion.js")"></script>
+  <script src="@routes.Assets.versioned("js/DeleteVersion.js")"></script>
 }
 
 
