--- a/datatags-app/app/views/interview/rejected.scala.html
+++ b/datatags-app/app/views/interview/rejected.scala.html
@@ -9,7 +9,7 @@
 
 @extraHead = {
 @Helpers.whenRTL(session.localization){
-  <link rel="stylesheet" href="@routes.Assets.at("css/rtl.min.css")">
+  <link rel="stylesheet" href="@routes.Assets.versioned("css/rtl.min.css")">
 }
 }
 
