--- a/datatags-app/app/views/backoffice/modelEditor.scala.html
+++ b/datatags-app/app/views/backoffice/modelEditor.scala.html
@@ -1,7 +1,7 @@
 @(form:Form[ModelFormData], isNew:Boolean)
 
 @scripts = {
-  <script type="text/javascript" src="@routes.Assets.at("js/modelEditor.js")"></script>
+  <script type="text/javascript" src="@routes.Assets.versioned("js/modelEditor.js")"></script>
 }
 
 
