--- a/datatags-app/app/views/backoffice/modelViewer.scala.html
+++ b/datatags-app/app/views/backoffice/modelViewer.scala.html
@@ -16,7 +16,7 @@
       }
     })
   </script>
-  <script src="@routes.Assets.at("js/DeleteVersion.js")"></script>
+  <script src="@routes.Assets.versioned("js/DeleteVersion.js")"></script>
 }
 
 @templates.backend("Model Editor", Symbol("backOffice"), scripts ) {
