--- a/datatags-app/app/views/interview/showReadme.scala.html
+++ b/datatags-app/app/views/interview/showReadme.scala.html
@@ -4,12 +4,12 @@
 
 @scripts = {
   <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
-  <script type="text/javascript" src="@routes.Assets.at("js/Question.js")"></script>
+  <script type="text/javascript" src="@routes.Assets.versioned("js/Question.js")"></script>
 }
 
 @extraHead = {
 @Helpers.whenRTL(loc){
-    <link rel="stylesheet" href="@routes.Assets.at("css/rtl.min.css")">
+    <link rel="stylesheet" href="@routes.Assets.versioned("css/rtl.min.css")">
   }
 }
 
