--- a/datatags-app/app/views/templates/bsBase.scala.html
+++ b/datatags-app/app/views/templates/bsBase.scala.html
@@ -7,14 +7,14 @@
 
     <title>@title</title>
 
-    <link href="@routes.Assets.at("css/font-awesome.min.css")" rel="stylesheet">
-    <link href="@routes.Assets.at("lib/bootstrap/css/bootstrap.min.css")" rel="stylesheet">
-	  <link rel="stylesheet" href="@routes.Assets.at("vnd/quilljs/quill.display.css")">
-	  <link rel="stylesheet" href="@routes.Assets.at("css/tags.min.css")">
-    <link rel="stylesheet" href="@routes.Assets.at("css/main.min.css")">
-	  <link rel="stylesheet" href="@routes.Assets.at("css/styledInputs.min.css")">
-	  <link rel="stylesheet" href="@routes.Assets.at("css/Informationals.min.css")">
-    <link rel="icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+    <link href="@routes.Assets.versioned("css/font-awesome.min.css")" rel="stylesheet">
+    <link href="@routes.Assets.versioned("lib/bootstrap/css/bootstrap.min.css")" rel="stylesheet">
+	  <link rel="stylesheet" href="@routes.Assets.versioned("vnd/quilljs/quill.display.css")">
+	  <link rel="stylesheet" href="@routes.Assets.versioned("css/tags.min.css")">
+    <link rel="stylesheet" href="@routes.Assets.versioned("css/main.min.css")">
+	  <link rel="stylesheet" href="@routes.Assets.versioned("css/styledInputs.min.css")">
+	  <link rel="stylesheet" href="@routes.Assets.versioned("css/Informationals.min.css")">
+    <link rel="icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 	   @extraHead
     @*@comps.analytics()*@
   </head>
@@ -44,10 +44,10 @@
       </div>
     </div>
   </footer>   
-    <script src="@routes.Assets.at("lib/jquery/jquery.min.js")"></script>
-    <script src="@routes.Assets.at("lib/popper.js/umd/popper.js")"></script>
-    <script src="@routes.Assets.at("lib/bootstrap/js/bootstrap.min.js")"></script>
-    <script src="@routes.Assets.at("lib/sweetalert/sweetalert.min.js")"></script>
+    <script src="@routes.Assets.versioned("lib/jquery/jquery.min.js")"></script>
+    <script src="@routes.Assets.versioned("lib/popper.js/umd/popper.js")"></script>
+    <script src="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.min.js")"></script>
+    <script src="@routes.Assets.versioned("lib/sweetalert/sweetalert.min.js")"></script>
     <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
     <script src="@routes.Assets.versioned("js/JsUtils.js")"></script>
     <script src="@routes.Assets.versioned("js/UiUtils.js")"></script>
