--- a/datatags-app/app/views/templates/bsNavBar.scala.html
+++ b/datatags-app/app/views/templates/bsNavBar.scala.html
@@ -2,7 +2,7 @@
 
 @headPart = {
 	@extraHead
-	<link href="@routes.Assets.at("css/navbar-extras.min.css")" rel="stylesheet">
+	<link href="@routes.Assets.versioned("css/navbar-extras.min.css")" rel="stylesheet">
 }
 
 @bsBase(title, scripts, headPart) {
@@ -16,7 +16,7 @@
     <ul class="nav navbar-nav ml-auto">
       <li class="nav-item">
       @if(Helpers.userPresent(req)) {
-        <a class="nav-link" data-toggle="tooltip" data-placement="bottom" title="User Home" href="@routes.BackendCtrl.index"><i class="fa fa-cogs"></i></a></li>
+        <a class="nav-link" data-toggle="tooltip" data-placement="bottom" title="User Home" href="@routes.CustomizationCtrl.index"><i class="fa fa-cogs"></i></a></li>
       } else {
       <a class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Log in to manage" href="@routes.UsersCtrl.showLogin"><i class="fa fa-sign-in"></i></a>
     }
