--- a/datatags-app/app/views/backoffice/modelEditor.scala.html
+++ b/datatags-app/app/views/backoffice/modelEditor.scala.html
@@ -1,11 +1,11 @@
-@(form:Form[ModelFormData], isNew:Boolean)
+@(form:Form[ModelFormData], isNew:Boolean)(implicit request: RequestHeader, msgs: MessagesProvider)
 
 @scripts = {
   <script type="text/javascript" src="@routes.Assets.versioned("js/modelEditor.js")"></script>
 }
 
 
-@templates.backend("Model Editor", Symbol("backOffice"), scripts ) {
+@templates.backend("Model Editor", views.BackOfficeSections.Models, scripts ) {
   <form action="@if(isNew){@routes.ModelCtrl.doSaveNewModel}else{@routes.ModelCtrl.doSaveModel(form("id").value.get)}" method="POST">
     @comps.pageTitleRow("Model Editor",
       "Use this page to create and edit models. models serve as a container with a fixed URL for different versions of a policy model."){
