--- a/datatags-app/app/views/backoffice/modelViewer.scala.html
+++ b/datatags-app/app/views/backoffice/modelViewer.scala.html
@@ -1,4 +1,4 @@
-@(model:Model, versions:Seq[VersionMD], enableEdits:Boolean, message:Option[String] )(implicit msgs: MessagesProvider)
+@(model:Model, versions:Seq[VersionMD], enableEdits:Boolean, message:Option[String] )(implicit request: RequestHeader, msgs: MessagesProvider)
 
 @scripts ={
   @if(versions.map(_.runningStatus).contains(RunningStatus.Processing)){
@@ -19,7 +19,7 @@
   <script src="@routes.Assets.versioned("js/DeleteVersion.js")"></script>
 }
 
-@templates.backend("Model Editor", Symbol("backOffice"), scripts ) {
+@templates.backend("Model Editor", views.BackOfficeSections.Models, scripts ) {
 
   <div class="row my-2 d-flex flex-row">
     <div class="col flex-grow-1">
