Customizations: Analytics screen implemented.

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -678,6 +678,10 @@ footer {
   }
 }
 
+.code {
+  font-family: "Source Code Pro", "Monaco", "Ubuntu Mono Regular", "Lucida Console", monospace;
+}
+
 table>tbody>tr>td.noteTd {
   border-top: none;
   border-left: #ddd solid 1px;
@@ -784,10 +788,6 @@ ul.localizations {
   margin: 1em 0;
   padding: 1em;
   font-size: 1.5em;
-}
-
-.pell-button {
-  white-space: nowrap;
 }
 
 .float-eol {
