--- a/datatags-app/app/views/backoffice/customizations/extraTextsCustomization.scala.html
+++ b/datatags-app/app/views/backoffice/customizations/extraTextsCustomization.scala.html
@@ -11,7 +11,7 @@
 
 @customizationScreen("Manage PolicyModels Server", views.Customization.Texts, scripts, Html("")) {
   @comps.pageTitleRow("Additional Texts", "Edit short texts that appear in various places throughout the application"){
-    <button onclick="save()" class="btn btn-large btn-primary float-right"><i class="fa fa-save"></i> @Messages("ui.save")</button>
+    <button onclick="save()" class="btn btn-large btn-primary"><i class="fa fa-save"></i> @Messages("ui.save")</button>
   }
   <div class="row my-2">
     <div class="col">
