Sty;ing color editor - operational

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -678,7 +678,7 @@ footer {
   }
 }
 
-.code {
+.text-code {
   font-family: "Source Code Pro", "Monaco", "Ubuntu Mono Regular", "Lucida Console", monospace;
 }
 
