--- a/datatags-app/app/views/backoffice/customizations/analyticsCustomization.scala.html
+++ b/datatags-app/app/views/backoffice/customizations/analyticsCustomization.scala.html
@@ -67,4 +67,13 @@
     </form>
   </div>
 </div>
+  <div class="row my-2">
+    <div class="col">
+      <p>
+        Several analytics services exist. We recommend using the open-source <a href="https://matomo.org">Matomo</a>. This
+          service can also be installed on-premise for free.
+        Another popular option is <a href="https://analytics.google.com">Google Analytics</a>.
+      </p>
+    </div>
+  </div>
 }
