--- a/datatags-app/app/views/templates/bsNavBar.scala.html
+++ b/datatags-app/app/views/templates/bsNavBar.scala.html
@@ -7,7 +7,7 @@
 
 @bsBase(title, scripts, headPart) {
 <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light">
-  <a class="navbar-brand" href="/">Policy<strong>Models</strong></a>
+  <a class="navbar-brand" href="/"><img src="@routes.CustomizationCtrl.getServerLogo()" height="30px" alt="Server Logo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
